# testing-repo-public

./: .editorconfig  .gitignore
python_docker_example/: .coveragerc  .dockerignore  .env.dev.template  Dockerfile  Makefile  docker-compose.yml  logging_utils.mk  pyproject.toml  requirements-dev.txt
python_docker_example/docker/: entrypoint.sh
python_docker_example/docker/utils/: logging.sh
python_docker_example/scripts/: run_app_name.py
python_docker_example/src/app_name/: main.py
python_docker_example/src/app_name/configs/: settings.py
python_docker_example/src/app_name/utils/: logger.py
python_docker_example/tests/unit/: test_file_to_test.py
